# llm-ripper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile.dev  Makefile  README.md  README_BR.md  RELEASE.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  spec.json  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  repository_config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs-deploy.yml  release.yml
api/: index.html
architecture/: index.html
beginners/: index.html
docs/: api.md  architecture.md  beginners.md  index.md  maintainers.md  quickstart.md
docs/guides/: causal_tracing.md  end_to_end.md  interop.md  safety_reporting.md  transplant_strategies.md  uq_routing.md  validation.md
examples/: beginner_quickstart.py  bench_micro.py  e2e_offline_dummy.py  merge_spec.yaml  perf_report.py  run_complete_pipeline.py  run_extraction_only.py  run_full_pipeline.py
guides/causal_tracing/: index.html
guides/end_to_end/: index.html
guides/interop/: index.html
guides/safety_reporting/: index.html
guides/transplant_strategies/: index.html
guides/uq_routing/: index.html
guides/validation/: index.html
knowledge_bank/: extraction_metadata.json
knowledge_bank/embeddings/: config.json
knowledge_bank/ffns/layer_0/: config.json
maintainers/: index.html
output_test/: metrics.jsonl  pairs.jsonl
quickstart/: index.html
search/: search_index.json
src/llm_ripper/: __init__.py  cli.py
src/llm_ripper/bridge/: __init__.py  align.py
src/llm_ripper/causal/: __init__.py  tracer.py
src/llm_ripper/core/: __init__.py  activation_capture.py  analysis.py  extraction.py  transplant.py  validation.py
src/llm_ripper/counterfactual/: __init__.py  evaluator.py  generator.py
tests/: conftest.py  test_activation_capture_helper.py  test_adapter_fusion_gate_training.py  test_architecture_resolver.py  test_cli_inspect.py  test_cli_inspect_params.py  test_cli_new_subcommands_offline.py  test_cli_parser.py  test_cli_subcommands_offline.py  test_config_validation.py  test_determinism_offline.py  test_hdf5_dataset_mode.py  test_hdf5_tools.py  test_imports.py  test_json_schema_shapes.py  test_moe_extraction_variants.py  test_moe_patterns.py  test_repo_placeholders.py  test_run_context.py  test_storage_sharded.py  test_transplant_diagnostics.py  test_transplant_injection_dummy.py  test_transplant_multiadapter.py  test_trust_remote_code.py
tests/schemas/: analysis_results.schema.json  validation_results.schema.json
(+24 files in other folders)
